// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create newrelic connector Wizard should render form 1`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.newRelicConnectorDetails
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          verify connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          overview
        </div>
        <div
          class="StyledProps--font StyledProps--main connectorForm StyledProps--padding-small"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          ID
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              />
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main"
                          icon="edit"
                          style="vertical-align: middle;"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepForm_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="description-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main"
                        style="font-size: 13px; font-weight: normal;"
                      >
                        optionalField
                        <span
                          class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                          data-name="edit"
                          data-testid="tags-edit"
                          icon="edit"
                        >
                          <svg
                            data-icon="edit"
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                          >
                            <desc>
                              edit
                            </desc>
                            <path
                              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create newrelic connector Wizard should render form 2`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.newRelicConnectorDetails
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          verify connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main credentials"
      >
        <p
          class="StyledProps--font StyledProps--main newRelicTitle"
          style="display: flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
            data-icon="service-newrelic"
          >
            <svg
              height="45"
              viewBox="0 0 14 11"
              width="45"
            >
              <path
                d="M13.9 4C13.2 1.1 9.6-.6 5.8.1S-.6 4 .1 6.9s4.3 4.6 8.1 3.9 6.4-3.9 5.7-6.8zM7 8.2c-1.5 0-2.8-1.3-2.8-2.7S5.5 2.8 7 2.8 9.8 4 9.8 5.5c0 1.4-1.3 2.7-2.8 2.7z"
                fill="#008c99"
              />
              <path
                d="M7.5 1C5 1 3 2.8 3 5s2 4 4.5 4S12 7.2 12 5s-2-4-4.5-4zm-.7 6.3c-1.5 0-2.7-1.1-2.7-2.4s1.2-2.4 2.7-2.4 2.7 1.1 2.7 2.4-1.2 2.4-2.7 2.4z"
                fill="#70ccd3"
              />
            </svg>
          </span>
          connectors.connectorDetailsHeader
        </p>
        <p
          class="StyledProps--font StyledProps--main heading"
        >
          connectors.addConnectorDetails
        </p>
        <p
          class="StyledProps--font StyledProps--main subHeading"
        >
          connectors.newRelic.subTitle
        </p>
        <form
          class="FormikForm--main form"
        >
          <div>
            <div
              class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
              style="height: 400px;"
            >
              <div
                class="bp3-form-group"
                data-id="url-0"
              >
                <label
                  class="bp3-label"
                  for="url"
                >
                  connectors.newRelic.urlFieldLabel
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="url"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="endpoint1"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="newRelicAccountId-1"
              >
                <label
                  class="bp3-label"
                  for="newRelicAccountId"
                >
                  <div
                    class="StyledProps--font StyledProps--main identifierLabel"
                  >
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--inline"
                    >
                      connectors.newRelic.accountIdFieldLabel
                    </span>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="info"
                          tabindex="0"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 12 12"
                            width="12"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="newRelicAccountId"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main secret-mock"
              >
                <div
                  class="bp3-form-group"
                  data-id="apiKeyRef-2"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="apiKeyRef"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  back
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  continue
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create newrelic connector Wizard should render form 3`] = `
<div>
  <div
    class="StepWizard--main StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.newRelicConnectorDetails
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          credentials
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          verify connection
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main credentials"
      >
        <p
          class="StyledProps--font StyledProps--main newRelicTitle"
          style="display: flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
            data-icon="service-newrelic"
          >
            <svg
              height="45"
              viewBox="0 0 14 11"
              width="45"
            >
              <path
                d="M13.9 4C13.2 1.1 9.6-.6 5.8.1S-.6 4 .1 6.9s4.3 4.6 8.1 3.9 6.4-3.9 5.7-6.8zM7 8.2c-1.5 0-2.8-1.3-2.8-2.7S5.5 2.8 7 2.8 9.8 4 9.8 5.5c0 1.4-1.3 2.7-2.8 2.7z"
                fill="#008c99"
              />
              <path
                d="M7.5 1C5 1 3 2.8 3 5s2 4 4.5 4S12 7.2 12 5s-2-4-4.5-4zm-.7 6.3c-1.5 0-2.7-1.1-2.7-2.4s1.2-2.4 2.7-2.4 2.7 1.1 2.7 2.4-1.2 2.4-2.7 2.4z"
                fill="#70ccd3"
              />
            </svg>
          </span>
          connectors.connectorDetailsHeader
        </p>
        <p
          class="StyledProps--font StyledProps--main heading"
        >
          connectors.addConnectorDetails
        </p>
        <p
          class="StyledProps--font StyledProps--main subHeading"
        >
          connectors.newRelic.subTitle
        </p>
        <form
          class="FormikForm--main form"
        >
          <div>
            <div
              class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
              style="height: 400px;"
            >
              <div
                class="bp3-form-group"
                data-id="url-0"
              >
                <label
                  class="bp3-label"
                  for="url"
                >
                  connectors.newRelic.urlFieldLabel
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="url"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="endpoint1"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group bp3-intent-danger"
                data-id="newRelicAccountId-1"
              >
                <label
                  class="bp3-label"
                  for="newRelicAccountId"
                >
                  <div
                    class="StyledProps--font StyledProps--main identifierLabel"
                  >
                    <span
                      class="StyledProps--font StyledProps--main StyledProps--inline"
                    >
                      connectors.newRelic.accountIdFieldLabel
                    </span>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="info"
                          tabindex="0"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 12 12"
                            width="12"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group bp3-intent-danger"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="newRelicAccountId"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="bp3-form-helper-text"
                  >
                    connectors.newRelic.accountIdValidation
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main secret-mock"
              >
                <div
                  class="bp3-form-group bp3-intent-danger"
                  data-id="apiKeyRef-2"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group bp3-intent-danger"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="apiKeyRef"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="bp3-form-helper-text"
                    >
                      connectors.encryptedAPIKeyValidation
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  back
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  continue
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
